--- a/crates/wgsl-rs-macros/Cargo.toml
+++ b/crates/wgsl-rs-macros/Cargo.toml
@@ -9,6 +9,7 @@ bench = false
 
 [dependencies]
 darling = "0.23.0"
+itertools.workspace = true
 proc-macro2.workspace = true
 snafu.workspace = true
 syn.workspace = true
