--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ resolver = "2"
 [workspace.dependencies]
 glam = "0.30.9"
 itertools = "0.14.0"
-naga_oil = "0.20.0"
+naga = { version = "27.0.3", features = ["wgsl-in", "wgsl-out"] }
 proc-macro2 = "1.0"
 quote = "1.0"
 snafu = "0.8.9"
