--- a/crates/wgsl-rs-macros/Cargo.toml
+++ b/crates/wgsl-rs-macros/Cargo.toml
@@ -9,6 +9,8 @@ bench = false
 
 [dependencies]
 darling = "0.23.0"
+ts-fmt-lite = "0.1.1"
+genemichaels-lib = "0.8.2"
 itertools.workspace = true
 proc-macro2.workspace = true
 snafu.workspace = true
