--- a/crates/wgsl-rs-macros/Cargo.toml
+++ b/crates/wgsl-rs-macros/Cargo.toml
@@ -12,6 +12,7 @@ darling = "0.23.0"
 ts-fmt-lite = "0.1.1"
 genemichaels-lib = "0.8.2"
 itertools.workspace = true
+naga.workspace = true
 proc-macro2.workspace = true
 snafu.workspace = true
 syn.workspace = true
