refactor: cleanup compute shader PR and add tests
- Remove unused UNUSED uniform from example
- Remove unused linkage feature from Cargo.toml
- Add explicit read_only support for storage! macro
- Add tests for storage buffer parsing and workgroup_size parsing
- Update documentation for ItemStorage to include read_only syntax
- Fix misleading comment about structs example

--- a/crates/wgsl-rs-macros/Cargo.toml
+++ b/crates/wgsl-rs-macros/Cargo.toml
@@ -4,9 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-default = ["validation", "linkage"]
+default = ["validation"]
 validation = ["dep:naga"]
-linkage = []
 
 [lib]
 proc-macro = true
