--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ proc-macro2 = { version = "1.0", features = ["span-locations"] }
 quote = "1.0"
 snafu = "0.8.9"
 syn = { version = "2.0", features = ["full", "printing", "extra-traits"] }
+wgpu = "28"
