Added test-time WGSL validation for modules with imports
Modules that import from other WGSL modules cannot be validated at
compile-time because naga doesn't see the imported symbols. Instead,
these modules now get an auto-generated #[test] fn __validate_wgsl()
that validates the concatenated WGSL source at test-time.

- Add Module::validate() method gated by "validation" feature
- Add skip_validation attribute to opt out of all validation
- Update README with validation documentation

--- a/crates/wgsl-rs/Cargo.toml
+++ b/crates/wgsl-rs/Cargo.toml
@@ -3,8 +3,13 @@ name = "wgsl-rs"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["validation"]
+validation = ["dep:naga"]
+
 [dependencies]
 glam.workspace = true
+naga = { workspace = true, optional = true }
 paste = "1"
 wgsl-rs-macros = { version = "0.1.0", path = "../wgsl-rs-macros" }
 
