feat: Add wgpu linkage generation for shader modules (#3)
* Add wgpu linkage generation for shader modules

Generate wgpu API code (shader modules, bind group layouts, pipelines)
from #[wgsl] modules when linkage-wgpu feature is enabled.

* dogfooding linkage in example

* generating code doesn't need to move ItemMod

--- a/crates/example/Cargo.toml
+++ b/crates/example/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+futures.workspace = true
 glam.workspace = true
 naga.workspace = true
-wgsl-rs = { path = "../wgsl-rs" }
+winit.workspace = true
+wgpu.workspace = true
+wgsl-rs = { path = "../wgsl-rs", features = ["linkage-wgpu"] }
