--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+futures = "0.3"
 glam = "0.30.9"
 itertools = "0.14.0"
 naga = { version = "27.0.3", features = ["wgsl-in", "wgsl-out"] }
@@ -15,3 +16,5 @@ proc-macro2 = { version = "1.0", features = ["span-locations"] }
 quote = "1.0"
 snafu = "0.8.9"
 syn = { version = "2.0", features = ["full", "printing", "extra-traits"] }
+wgpu = "28"
+winit = "0.30"
